--- a/Myhobby.html
+++ b/Myhobby.html
@@ -10,9 +10,9 @@
     <h2>MY HOBBIES </h2>
     <hr>
     <ol> 
-  <li>   <a href="https://www.youtube.com/shorts/zKE72yHJakQ">Gaming </a></li>
+  <li><a href="https://www.youtube.com/shorts/zKE72yHJakQ">Gaming </a></li>
     <li><a href="https://www.youtube.com/watch?v=ZZerv9umXuU">Exploring</a></li>
-   <li>cs<a href="https://www.youtube.com/shorts/k7LSFYyBZUs">Coding</a></li>
+   <li><a href="https://www.youtube.com/shorts/k7LSFYyBZUs">Coding</a></li>
 </ol>
 <a href="./index.html">Go back to home </a><br>
 </body>
